Image is correct, background not showing

--- a/www/css/customFitStyling.css
+++ b/www/css/customFitStyling.css
@@ -7,7 +7,7 @@
 body
 {
   position: relative;
-  background-color: #f0f0f0;
+  background-color: #e4e4e4;
   font-family: "Roboto";
   font-weight: 300;
   margin: 0;
